--- a/Sprint-2/views/login.html
+++ b/Sprint-2/views/login.html
@@ -1,12 +1,239 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <!-- j a v a s c r i p t -->
+    <script defer src="/js/index.js"></script>
     
+    <!-- f o n t s -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+    <!-- i c o n o s -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
+    
+
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>Formulario de login </title>
+</head>
+
+<body>
+     
+        <!-- h e a d e r -->
+        <header>
+            <nav class="content">
+                <!-- l o g o -->
+                <div class="logo">
+                    <a href="/" class="home"><img src="/images/logo.png" alt="Akamaru"></a>
+                </div>
+    
+                 <!-- b o t o n e s -->
+                <div class="nav-left">
+                    <ul class="menu menu_visible">
+                        <li><a href="/" class="enlaces">Inicio</a></li>
+                        <li><a href="/" class="enlaces">Productos</a>
+                            <ul class="submenu">
+                                <li><a href="/#" class="enlaces">Tazas</a></li>
+                                <li><a href="/#" class="enlaces">Mochilas y bolsos</a></li>
+                                <li><a href="/#" class="enlaces">Cartucheras</a></li>
+                                <li><a href="/#" class="enlaces">Accesorios</a></li>
+                                <li><a href="/#" class="enlaces">Figuras</a></li>
+                                <li><a href="/#" class="enlaces">Mangas</a></li>
+                            </ul> 
+                        </li>
+                        <li><a href="/#" class="enlaces">Nosotros</a></li>
+                        <li><a href="/#" class="enlaces">FAQ</a></li>
+                        <ul class="enlaces-resp">
+                            <li><a href="/login" class="enlaces"><b>Iniciar sesión</b></a></li>
+                            <li><a href="/register" class="enlaces"><b>Registrate</b></a></li>
+                            <li><a href="/cart" class="enlaces"><b>Carrito</b></a></li>
+                        </ul>
+                    </ul>
+                </div>
+                  
+                <!-- i c o n o s -->
+                <div class="nav-right">
+                    <ul class="menu-icons">
+                        <li><a href="/#" class="icons"><i class="fas fa-search"></i></a></li>
+                        <li><a href="/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a href="/login" class="icons"><i class="fas fa-user"></i></a></li>
+                    </ul>
+                </div>
+    
+                <!-- m e n u  h a m b u r g u e s a -->
+                <button class="burger-menu">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </nav>
+        </header>
+
+    <main>
+
+
+        <section class="container">
+            <h3 class="font-weight-bold">Acceso</h3>
+            <form>
+    
+                <!-- Grupo: Correo electronico -->
+                <div class="form-group mb-3">
+                    <label for="correo" class="font-weight-bold">Correo electrónico </label>
+                    <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico" id="correo">
+                    <span> </span>
+                </div>
+    
+                <!-- Grupo: Contraseña -->
+                <div class="form-group mb-3">
+                    <label for="contraseña" class="font-weight-bold">Contraseña </label>
+                    <input type="password" class="form-control" placeholder="Tu contraseña" id="contraseña">
+                    <span> </span>
+                </div>
+    
+                <!-- RECORDAR USUARIO -->
+                <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                    <label class="form-check-label" for="flexCheckChecked">
+                        Recuerdame
+                    </label>
+                </div>
+    
+                <!-- LOGIN  -->
+                <div class="mb-3">
+                    
+                    <button class="btn btn-primary btn-sm">Iniciar</button>
+    
+                </div>
+    
+                <!-- ENLACE A RESTABLECER CONTRASEÑA-->
+    
+                <div class="mb-3 text-center">
+                    <a href="#" target="_blank">Olvidé mi contraseña</a>
+                </div>
+    
+                <!-- ENLACE A REGISTRO-->
+    
+                <div class="form-group mb-3 c text-center">
+                    <p>¿No tienes cuenta? <a href="#" target="_blank">Registrate</a> </p>
+                </div>
+    
+                <!-- BOTON FACEBOOK-->
+    
+                <div class="facebook mb-3">
+                    <button class="btn btn-primary btn-sm btn-block">Iniciar sesión con Facebook</button>
+                </div>
+    
+                <!-- BOTON GOOGLE -->
+    
+                <div class="google mb-3">
+                    <button class="btn btn-primary btn-sm btn-block">Iniciar sesión con Google</button>
+                </div>
+    
+            </form>
+    
+        </section>
+    
+
+
+    </main>
+    
+
+
+    <footer>
+        <div class="container-footer-m">
+            <div class="container-footer">
+                <div class="column0">
+                    <img class="column0-img" src="\images\AKAMARU-banner.png" alt="">
+                </div>
+                <div class="column1">
+                    <h3>Información de la Empresa </h3>
+                    <p>Akamaru es una empresa argentina de Merchandising de anime que nació en plena pandemia para
+                        llevarle
+                        al público fan del anime como Naruto, Dragon Ball, etc., los mejores productos del mercado con
+                        la
+                        comodidad de comprar vía web y recibirlos en su domicilio, sin necesidad de salir de su casa.
+                    </p>
+                </div>
+                <div class="column2">
+                    <h3>Redes Sociales</h3>
+                    <!-- row = fila -->
+                    <div class="column2-row">
+                        <div class="column2-row-icon-fb">
+                            <i class="fab fa-facebook icon"></i>
+                            <label for="">Siguenos en Facebook</label>
+                        </div>
+                        <div class="column2-row-icon-tw">
+                            <i class="fab fa-twitter icon"></i>
+                            <label for="">Siguenos en Twitter</label>
+                        </div>
+                        <div class="column2-row-icon-ins">
+                            <i class="fab fa-instagram icon"></i>
+                            <label for="">Siguenos en Instagram</label>
+                        </div>
+                        <div class="column2-row-icon-wsp">
+                            <i class="fab fa-whatsapp icon"></i>
+                            <label for="">Contactanos por Whatsapp</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="column3">
+                    <h3>Información de contacto</h3>
+                    <div class="column3-row">
+                        <div class="column3-row-icon-home">
+                            <i class="fas fa-home icon"></i>
+                            <label for="">Calle falsa 123, Buenos Aires, Argentina</label>
+                        </div>
+                        <div class="column3-row-icon-mobile">
+                            <i class="fas fa-mobile-alt icon"></i>
+                            <label for="">+54 1234-4526</label>
+                        </div>
+                        <div class="column3-row-icon-mail icon">
+                            <i class="fas fa-envelope"></i>
+                            <label for="">akamaru.ventas@gmail.com</label>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="container-footer2">
+                <div class="container-footer2a">
+                    <div class="container-footer2-copyright">
+                        <a href="">Copyright © 1999-2021 Akamaru S.R.L
+                        </a>
+                    </div>
+                    <div class="container-footer2-terminos">
+                        <a href="">Términos y Condiciones</a> |
+                        <a href="">Politica de Cookies</a> |
+                        <a href="">Politica de Privacidad</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+
+
+        
 </body>
+
 </html>
