--- a/Sprint-2/views/home.html
+++ b/Sprint-2/views/home.html
@@ -1,14 +1,244 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AKAMARU</title>
+
+     <!-- j a v a s c r i p t -->
+    <script defer src="/js/index.js"></script>
+
+    <!-- f o n t s -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="/css/style.css" rel="stylesheet">
+
+    <!-- i c o n o s -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1></h1>
+    <!-- h e a d e r -->
+    <header>
+        <nav class="content">
+            <!-- l o g o -->
+            <div class="logo">
+                <a href="/" class="home"><img src="/images/logo.png" alt="Akamaru"></a>
+            </div>
+
+             <!-- b o t o n e s -->
+            <div class="nav-left">
+                <ul class="menu menu_visible">
+                    <li><a href="/" class="enlaces">Inicio</a></li>
+                    <li><a href="/" class="enlaces">Productos</a>
+                        <ul class="submenu">
+                            <li><a href="/#" class="enlaces">Tazas</a></li>
+                            <li><a href="/#" class="enlaces">Mochilas y bolsos</a></li>
+                            <li><a href="/#" class="enlaces">Cartucheras</a></li>
+                            <li><a href="/#" class="enlaces">Accesorios</a></li>
+                            <li><a href="/#" class="enlaces">Figuras</a></li>
+                            <li><a href="/#" class="enlaces">Mangas</a></li>
+                        </ul> 
+                    </li>
+                    <li><a href="/#" class="enlaces">Nosotros</a></li>
+                    <li><a href="/#" class="enlaces">FAQ</a></li>
+                    <ul class="enlaces-resp">
+                        <li><a href="/login" class="enlaces"><b>Iniciar sesión</b></a></li>
+                        <li><a href="/register" class="enlaces"><b>Registrate</b></a></li>
+                        <li><a href="/cart" class="enlaces"><b>Carrito</b></a></li>
+                    </ul>
+                </ul>
+            </div>
+              
+            <!-- i c o n o s -->
+            <div class="nav-right">
+                <ul class="menu-icons">
+                    <li><a href="/#" class="icons"><i class="fas fa-search"></i></a></li>
+                    <li><a href="/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="/login" class="icons"><i class="fas fa-user"></i></a></li>
+                </ul>
+            </div>
+
+            <!-- m e n u  h a m b u r g u e s a -->
+            <button class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </button>
+        </nav>
+    </header>
+    <main class = "main">
+
+        <!--   C a r o u s e l     -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/op.jpg" class="d-block w-100 slider-img" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/n1.jpg" class="d-block w-100 slider-img" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/db1.jpg" class="d-block w-100 slider-img" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <h2 class = "titulo-Destacados">Productos Destacados</h2> 
+
+        <!--  P r o d u c t o s   -->
+        <section class = "conteiner-products">
+            <article class = "product">
+                <img class = "img-product" src="/images/goku-db.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product"src="/images/luffy-op.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/libreta-dn.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/taza-db.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/luffy-02-op.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/gorro-dn.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/goku-db.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+            <article class = "product">
+                <img class = "img-product" src="/images/libreta-dn.jpg" alt="">
+                <div class = "product-description">
+                    <h3 class = "name-product">Producto</h3>
+                    <p>$0.000,00</p>
+                    <p>6 <span>cuotas de </span>$0.000,00</p>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container-footer-m">
+            <div class="container-footer">
+                <div class="column0">
+                    <img class="column0-img" src="\images\AKAMARU-banner.png" alt="">
+                </div>
+                <div class="column1">
+                    <h3>Información de la Empresa </h3>
+                    <p>Akamaru es una empresa argentina de Merchandising de anime que nació en plena pandemia para
+                        llevarle
+                        al público fan del anime como Naruto, Dragon Ball, etc., los mejores productos del mercado con
+                        la
+                        comodidad de comprar vía web y recibirlos en su domicilio, sin necesidad de salir de su casa.
+                    </p>
+                </div>
+                <div class="column2">
+                    <h3>Redes Sociales</h3>
+                    <!-- r o w = f i l a -->
+                    <div class="column2-row">
+                        <div class="column2-row-icon-fb">
+                            <i class="fab fa-facebook icon"></i>
+                            <label for="">Siguenos en Facebook</label>
+                        </div>
+                        <div class="column2-row-icon-tw">
+                            <i class="fab fa-twitter icon"></i>
+                            <label for="">Siguenos en Twitter</label>
+                        </div>
+                        <div class="column2-row-icon-ins">
+                            <i class="fab fa-instagram icon"></i>
+                            <label for="">Siguenos en Instagram</label>
+                        </div>
+                        <div class="column2-row-icon-wsp">
+                            <i class="fab fa-whatsapp icon"></i>
+                            <label for="">Contactanos por Whatsapp</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="column3">
+                    <h3>Información de contacto</h3>
+                    <div class="column3-row">
+                        <div class="column3-row-icon-home">
+                            <i class="fas fa-home icon"></i>
+                            <label for="">Calle falsa 123, Buenos Aires, Argentina</label>
+                        </div>
+                        <div class="column3-row-icon-mobile">
+                            <i class="fas fa-mobile-alt icon"></i>
+                            <label for="">+54 1234-4526</label>
+                        </div>
+                        <div class="column3-row-icon-mail icon">
+                            <i class="fas fa-envelope"></i>
+                            <label for="">akamaru.ventas@gmail.com</label>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="container-footer2">
+                <div class="container-footer2a">
+                    <div class="container-footer2-copyright">
+                        <a href="">Copyright © 1999-2021 Akamaru S.R.L
+                        </a>
+                    </div>
+                    <div class="container-footer2-terminos">
+                        <a href="">Términos y Condiciones</a> |
+                        <a href="">Politica de Cookies</a> |
+                        <a href="">Politica de Privacidad</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
-
-
