--- a/Sprint-2/public/css/style.css
+++ b/Sprint-2/public/css/style.css
@@ -4,3 +4,5 @@
 @import url('./register.css');
 @import url('./login.css');
 @import url('./footer.css');
+@import url('./detail.css');
+@import url('./home.css');
