--- a/Sprint-2/public/css/cart.css
+++ b/Sprint-2/public/css/cart.css
@@ -1,6 +1,6 @@
 
 
-.carrito {
+ .carrito {
     background-color: white;
     width: 90%;
     margin: auto;
@@ -9,7 +9,7 @@
 
 /* t i t u l o s */
 
-.titulos{
+ .titulos{
     margin: auto;
     padding: 0 0 15px;
     width: 90%;
@@ -42,7 +42,7 @@
 
 /* a r t i c u l o */
 
-article {
+.art-carrito{
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -57,12 +57,9 @@ article {
     height: 40px;
 }
 
-.eliminar-prod {
-    background-color: white;
-    color: black;
-    border: 1px solid gray;
-    font-size: 10px;
-    
+
+.fa-trash-alt {
+    font-size: 15px;
 }
 
 .titulo-prod{
@@ -180,12 +177,7 @@ article {
         height: 70px;
     }
     
-    .eliminar-prod {
-        background-color: white;
-        color: black;
-        border: 1px solid gray;
-        font-size: 10px;
-    }
+  
 
     .precio {
         font-size: 15px;
@@ -232,7 +224,7 @@ article {
 
 /* a r t i c u l o */
 
-article {
+.art-carrito{
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -247,11 +239,10 @@ article {
     height: 70px;
 }
 
-.eliminar-prod {
-    background-color: white;
-    color: black;
-    border: 1px solid gray;
-    font-size: 15px;
+
+
+.fa-trash-alt{
+    display: none;
 }
 
 .titulo-prod{
