--- a/Sprint-2/views/cart.html
+++ b/Sprint-2/views/cart.html
@@ -83,15 +83,16 @@
                 </div>
 
             </div>
-            <article>
+            <article class="art-carrito">
                 <div class="img-articulo">
                     <img src="/images/Gatito.jpg" alt="producto">
                 </div>
 
                 <p class="titulo-prod">Producto</p>
 
-                <button class="eliminar-prod">Eliminar producto</button>
+                <i class="fas fa-trash-alt"></i>
 
+    
                 <div class="cant-input">
                     <input type="button" value="-" class="menos"><input type="number" class="cantidad-prod" name="cantidad-prod"
                      min="1" max="100"><input type="button" value="+" class="mas">
@@ -100,14 +101,15 @@
                 <p class="precio-prod">$0000,00</p>
             </article>
 
-            <article>
+            <article class="art-carrito">
                 <div class="img-articulo">
                     <img src="/images/Gatito.jpg" alt="producto">
                 </div>
 
                 <p class="titulo-prod">Producto</p>
 
-                <button class="eliminar-prod">Eliminar producto</button>
+                <i class="fas fa-trash-alt"></i>
+
             
             <div class="cant-input">
                  <button class="input-boton">-</button><input type="number" class="cantidad-prod" name="cantidad-prod"
