--- a/Sprint-2/views/detail.html
+++ b/Sprint-2/views/detail.html
@@ -62,7 +62,7 @@
         </nav>
     </header>
     <!-- d e t a l l e  d e l  p r o d u c t o -->
-    <main>
+    <main class="main">
         <div class="navegacion">
             <ul>
                 <li><a href="#">home</a>
@@ -143,6 +143,7 @@
         </div>
         <!-- s l i d e r   p r o d u c t -->
         <div id="carouselExampleControls" class="carousel slide carousel-articulos-banner" data-bs-ride="carousel">
+            <h4 class="product-destacado-h4">Productos Destacados</h4>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <section class="contiene-s">
@@ -150,29 +151,13 @@
                             <img class="caja1" src="/images/libreta-dn.jpg" alt="">
                         </article>
                         <article>
-                            <img class="caja2" src="/images/libreta-dn.jpg" alt="">
+                            <img class="caja2" src="/images/goku-db.jpg" alt="">
                         </article>
                         <article class="articulo-3">
-                            <img class="caja4" src="/images/libreta-dn.jpg" alt="">
+                            <img class="caja3" src="/images/carousel-img4.jpg" alt="">
                         </article>
                         <article class="articulo-4">
-                            <img class="caja4" src="/images/libreta-dn.jpg" alt="">
-                        </article>
-                    </section>
-                </div>
-                <div class="carousel-item">
-                    <section class="contiene-s">
-                        <article>
-                            <img class="caja1" src="/images/taza-db.jpg" alt="">
-                        </article>
-                        <article>
-                            <img class="caja2" src="/images/taza-db.jpg" alt="">
-                        </article>
-                        <article class="articulo-3">
-                            <img class="caja4" src="/images/taza-db.jpg" alt="">
-                        </article>
-                        <article class="articulo-4">
-                            <img class="caja4" src="/images/taza-db.jpg" alt="">
+                            <img class="caja4" src="/images/gorro-dn.jpg" alt="">
                         </article>
                     </section>
                 </div>
@@ -182,10 +167,26 @@
                             <img class="caja1" src="/images/goku-db.jpg" alt="">
                         </article>
                         <article>
+                            <img class="caja2" src="/images/gorro-dn.jpg" alt="">
+                        </article>
+                        <article class="articulo-3">
+                            <img class="caja3" src="/images/libreta-dn.jpg" alt="">
+                        </article>
+                        <article class="articulo-4">
+                            <img class="caja4" src="/images/carousel-img4.jpg" alt="">
+                        </article>
+                    </section>
+                </div>
+                <div class="carousel-item">
+                    <section class="contiene-s">
+                        <article>
+                            <img class="caja1" src="/images/libreta-dn.jpg" alt="">
+                        </article>
+                        <article>
                             <img class="caja2" src="/images/goku-db.jpg" alt="">
                         </article>
                         <article class="articulo-3">
-                            <img class="caja4" src="/images/goku-db.jpg" alt="">
+                            <img class="caja3" src="/images/carousel-img4.jpg" alt="">
                         </article>
                         <article class="articulo-4">
                             <img class="caja4" src="/images/taza-db.jpg" alt="">
