Actualización de css y corrección de formularios

--- a/Sprint-2/views/login.html
+++ b/Sprint-2/views/login.html
@@ -91,20 +91,20 @@
                 <!-- Grupo: Correo electronico -->
                 <div class="form-group mb-3">
                     <label for="correo" class="font-weight-bold">Correo electrónico </label>
-                    <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico" id="correo">
+                    <input type="email" name="correo" class="form-control" placeholder="Ingresa tu correo electrónico" id="correo">
                     <span> </span>
                 </div>
     
                 <!-- Grupo: Contraseña -->
                 <div class="form-group mb-3">
                     <label for="contraseña" class="font-weight-bold">Contraseña </label>
-                    <input type="password" class="form-control" placeholder="Tu contraseña" id="contraseña">
+                    <input type="password" name="contraseña" class="form-control" placeholder="Tu contraseña" id="contraseña">
                     <span> </span>
                 </div>
     
                 <!-- RECORDAR USUARIO -->
                 <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                    <input type="checkbox" name="flexCheckChecked" class="form-check-input" value="" id="flexCheckChecked" checked>
                     <label class="form-check-label" for="flexCheckChecked">
                         Recuerdame
                     </label>
@@ -126,7 +126,7 @@
                 <!-- ENLACE A REGISTRO-->
     
                 <div class="form-group mb-3 c text-center">
-                    <p>¿No tienes cuenta? <a href="#" target="_blank">Registrate</a> </p>
+                    <p>¿No tienes cuenta? <a href="/register" target="_blank">Registrate</a> </p>
                 </div>
     
                 <!-- BOTON FACEBOOK-->
