--- a/Sprint-2/public/css/register.css
+++ b/Sprint-2/public/css/register.css
@@ -13,7 +13,7 @@ body {
     width: 300px;
     background: #ffffff;
     padding: 30px;
-    margin: auto;
+    margin: 2em auto;  
     margin-top: 100px;
     border-radius: 4px;
     font-family: 'calibri';
